--- a/Kodstuga.Auth.Blazor.Demo/_Imports.razor
+++ b/Kodstuga.Auth.Blazor.Demo/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using Kodstuga.Auth.Blazor.Demo
 @using Kodstuga.Auth.Blazor.Demo.Layout
+@using Kodstuga.Auth.Blazor.Demo.Components
