--- a/Kodstuga.Auth.Blazor.Demo/Pages/Weather.razor
+++ b/Kodstuga.Auth.Blazor.Demo/Pages/Weather.razor
@@ -1,28 +1,30 @@
 ﻿@page "/weather"
 @inject HttpClient Http
 
-<PageTitle>Weather</PageTitle>
 
-<h1>Weather</h1>
+<AuthorizeView AllowedRole="ADMIN">
+    <PageTitle>Weather</PageTitle>
 
-<p>This component demonstrates fetching data from the server.</p>
+    <h1>Weather</h1>
 
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
+    <p>This component demonstrates fetching data from the server.</p>
+
+    @if (forecasts == null)
+    {
+        <p><em>Loading...</em></p>
+    }
+    else
+    {
+        <table class="table">
+            <thead>
             <tr>
                 <th>Date</th>
                 <th aria-label="Temperature in Celsius">Temp. (C)</th>
                 <th aria-label="Temperature in Farenheit">Temp. (F)</th>
                 <th>Summary</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             @foreach (var forecast in forecasts)
             {
                 <tr>
@@ -32,9 +34,10 @@ else
                     <td>@forecast.Summary</td>
                 </tr>
             }
-        </tbody>
-    </table>
-}
+            </tbody>
+        </table>
+    }
+</AuthorizeView>
 
 @code {
     private WeatherForecast[]? forecasts;
